# mesa-Panfrost-G610

./: .editorconfig  .gitlab-ci.yml  CODEOWNERS  README-CSF.rst  README.md  README.rst  VERSION  meson.build  meson_options.txt
.gitlab-ci/: deqp-runner.sh  image-tags.yml  prepare-artifacts.sh  run-shader-db.sh  test-source-dep.yml
.gitlab-ci/common/: generate-env.sh  init-stage2.sh
.gitlab-ci/container/: arm64.config  build-deqp-runner.sh  build-deqp.sh  build-piglit.sh  build-vkd3d-proton.sh  container_pre_build.sh  create-rootfs.sh  gitlab-ci.yml  lava_build.sh
.gitlab-ci/container/alpine/: x86_build.sh
.gitlab-ci/container/debian/: arm_build.sh  arm_test.sh  x86_build-base.sh  x86_test-gl.sh  x86_test-vk.sh
.gitlab-ci/container/fedora/: x86_build.sh
.gitlab-ci/meson/: build.sh
.gitlab-ci/test/: gitlab-ci.yml
.gitlab-ci/windows/: deqp_runner_run.ps1  mesa_deps_test.ps1  piglit_run.ps1
docs/: conf.py  download.rst  envvars.rst  features.txt  gallium-nine.rst  index.rst  install.rst  macos.rst  meson.rst  perfetto.rst  release-calendar.csv  relnotes.rst  shading.rst  sourcetree.rst  thanks.rst  u_trace.rst  utilities.rst
docs/_exts/: formatting.py
docs/ci/: LAVA.rst  bare-metal.rst  index.rst  local-traces.rst  skqp.rst
docs/drivers/: anv.rst  asahi.rst  llvmpipe.rst  panfrost.rst  svga3d.rst  zink.rst
docs/gallium/: context.rst  screen.rst  tgsi.rst
docs/gallium/cso/: rasterizer.rst
docs/relnotes/: 13.0.6.rst  19.0.0.rst  20.0.0.rst  20.2.0.rst  20.3.0.rst  22.2.4.rst  22.3.0.rst  new_features.txt
docs/vulkan/: renderpass.rst
include/: meson.build
include/GL/internal/: dri_interface.h
include/drm-uapi/: drm_fourcc.h
include/pci_ids/: iris_pci_ids.h
src/: meson.build
src/amd/: .clang-format
src/amd/ci/: gitlab-ci.yml  radeonsi-stoney-fails.txt  radeonsi-stoney-flakes.txt  radeonsi-stoney-skips.txt  radv-navi21-aco-flakes.txt  radv-renoir-aco-flakes.txt  radv-stoney-aco-fails.txt  radv-vangogh-aco-flakes.txt  traces-amd.yml
src/amd/common/: ac_debug.c  ac_gpu_info.c  ac_nir.c  ac_nir.h  ac_nir_cull.c  ac_nir_lower_ngg.c  ac_nir_lower_taskmesh_io_to_mem.c  ac_rtld.c  ac_shader_util.c  ac_shadowed_regs.c  amd_family.c  amd_family.h
src/amd/compiler/: aco_assembler.cpp  aco_instruction_selection.cpp  aco_instruction_selection.h  aco_instruction_selection_setup.cpp  aco_interface.cpp  aco_interface.h  aco_ir.cpp  aco_ir.h  aco_lower_to_hw_instr.cpp  aco_optimizer.cpp  aco_optimizer_postRA.cpp  aco_print_ir.cpp  aco_register_allocation.cpp  aco_shader_info.h  aco_ssa_elimination.cpp  aco_statistics.cpp
src/amd/llvm/: ac_llvm_build.c  ac_llvm_util.c  ac_nir_to_llvm.c  ac_shader_abi.h
src/amd/registers/: gfx11.json  gfx9.json  parse_kernel_headers.py
src/amd/vulkan/: meson.build  radv_acceleration_structure.c  radv_aco_shader_info.h  radv_cmd_buffer.c  radv_debug.c  radv_descriptor_set.c  radv_device.c  radv_formats.c  radv_image.c  radv_meta.c  radv_meta_resolve.c  radv_meta_resolve_cs.c  radv_meta_resolve_fs.c  radv_nir_apply_pipeline_layout.c  radv_nir_lower_abi.c  radv_nir_lower_ray_queries.c  radv_nir_to_llvm.c  radv_pipeline.c  radv_pipeline_rt.c  radv_private.h  radv_query.c  radv_rra.c  radv_rt_common.c  radv_rt_common.h  radv_rt_shader.c  radv_sdma_copy_image.c  radv_shader.c  radv_shader.h  radv_shader_args.c  radv_shader_args.h  radv_shader_info.c  si_cmd_buffer.c
src/asahi/: meson.build
src/asahi/compiler/: agx_compile.c  agx_compile.h  agx_compiler.h  agx_dce.c  agx_internal_formats.h  agx_liveness.c  agx_lower_parallel_copy.c  agx_lower_resinfo.c  agx_nir_lower_load_mask.c  agx_nir_lower_texture.c  agx_nir_lower_ubo.c  agx_nir_opt_preamble.c  agx_opcodes.c.py  agx_opcodes.h.py  agx_opcodes.py  agx_opt_cse.c  agx_optimizer.c  agx_pack.c  agx_register_allocate.c  agx_validate.c  meson.build
src/asahi/drm-shim/: asahi_noop.c  meson.build
src/asahi/layout/: layout.c  layout.h  meson.build
src/asahi/lib/: agx_bo.h  agx_device.c  agx_device.h  agx_formats.c  agx_formats.h  agx_meta.c  agx_meta.h  agx_nir_format_helpers.h  (+12 more)
src/drm-shim/: device.c
src/egl/: meson.build
src/egl/wayland/mali-buffer-sharing/: mali-buffer-sharing.c  mali-buffer-sharing.h  mali-buffer-sharing.xml  meson.build
src/freedreno/: meson.build
src/glx/: dri2_glx.c  dri3_glx.c  dri3_priv.h  dri_common.c  drisw_glx.c  glx_pbuffer.c  glxcmds.c  glxext.c  glxextensions.c
src/imagination/: .clang-format
src/intel/: meson.build
src/loader/: loader.c  loader.h  meson.build
src/mesa/: meson.build
src/panfrost/: meson.build
src/panfrost/base/: meson.build  pan_base.c  pan_base.h  pan_base_noop.h  pan_cache.h  pan_vX_base.c
src/panfrost/base/include/: mali_base_kernel.h  mali_kbase_gpuprops.h  mali_kbase_ioctl.h
src/panfrost/base/include/csf/: mali_gpu_csf_registers.h
src/panfrost/base/include/old/: mali-ioctl-midgard.h  mali-ioctl.h  mali-props.h
src/panfrost/bifrost/: bi_opt_cse.c  bi_opt_dual_tex.c  bifrost_compile.c  cmdline.c
src/panfrost/ci/: deqp-panfrost-g610.toml
src/panfrost/csf_test/: interpret.py  mali_base_kernel.h  mali_kbase_ioctl.h  test.c
src/panfrost/lib/: meson.build  pan_afbc.c  pan_blend.c  pan_blitter.c  pan_bo.c  pan_bo.h  pan_cs.c  pan_cs.h  pan_device.h  pan_indirect_dispatch.c  pan_indirect_dispatch.h  pan_layout.c  pan_pool.h  pan_props.c  pan_scoreboard.h  pan_texture.h  pan_util.h  wrap.h
src/panfrost/lib/genxml/: common.xml  decode.c  decode.h  decode_common.c  gen_macros.h  gen_pack.py  meson.build  v10.xml  v4.xml  v5.xml  v6.xml  v7.xml  v9.xml
src/panfrost/midgard/: disassemble.c  midgard_compile.c  midgard_compile.h  midgard_ops.c
src/panfrost/tiler/: tiler-hex-read
src/panfrost/util/: pan_ir.h
src/panfrost/vulkan/: meson.build  panvk_cmd_buffer.c  panvk_device.c  panvk_image.c  panvk_private.h  panvk_vX_cmd_buffer.c  panvk_vX_cmd_buffer.h
src/util/: 00-mesa-defaults.conf  disk_cache.c  disk_cache_os.h  driconf.h  glsl2spirv.py  macros.h  meson.build  os_misc.c  os_misc.h  stable_array.h  u_debug.c  u_debug.h  u_debug_stack_android.cpp  u_debug_symbol.c  u_math.h  u_process.c
(+764 files in other folders)
